test/type/fail/paren_type_erase_1.j
class A {
  Void main() {
    return 5 + (false);
  }
}
